@@ -501,13 +501,11 @@ This Work includes contributions authored by David E. Jones, not as a
     <xs:element name="panel-header">
         <xs:complexType>
             <xs:group ref="widget-elements" minOccurs="0" maxOccurs="unbounded"/>
-            <!-- not for 1.0, should use CSS styles, may add later if determined to be a good thing: <xs:attribute name="height" type="xs:float"/> -->
         </xs:complexType>
     </xs:element>
     <xs:element name="panel-left">
         <xs:complexType>
             <xs:group ref="widget-elements" minOccurs="0" maxOccurs="unbounded"/>
-            <!-- not for 1.0, should use CSS styles, may add later if determined to be a good thing: <xs:attribute name="width" type="xs:float"/> -->
             <!-- TODO handle draggable -->
             <xs:attribute name="draggable" default="false" type="boolean"/>
         </xs:complexType>
@@ -520,15 +518,27 @@ This Work includes contributions authored by David E. Jones, not as a
     <xs:element name="panel-right">
         <xs:complexType>
             <xs:group ref="widget-elements" minOccurs="0" maxOccurs="unbounded"/>
-            <!-- not for 1.0, should use CSS styles, may add later if determined to be a good thing: <xs:attribute name="width" type="xs:float"/> -->
         </xs:complexType>
     </xs:element>
     <xs:element name="panel-footer">
         <xs:complexType>
             <xs:group ref="widget-elements" minOccurs="0" maxOccurs="unbounded"/>
-            <!-- not for 1.0, should use CSS styles, may add later if determined to be a good thing:  <xs:attribute name="height" type="xs:float"/> -->
         </xs:complexType>
     </xs:element>
+    <xs:element name="container-dialog" substitutionGroup="AllWidgets">
+        <xs:annotation><xs:documentation>
+            The contents start out hidden with only a button with the button-text on it. When the button is clicked on
+            a dialog opens to show the contents.
+        </xs:documentation></xs:annotation>
+        <xs:complexType>
+            <xs:group ref="widget-elements" minOccurs="0" maxOccurs="unbounded"/>
+            <xs:attribute name="id" type="xs:string" use="required"/>
+            <xs:attribute name="button-text" type="xs:string" use="required"/>
+            <xs:attribute name="width" type="xs:string" default="600"/>
+            <xs:attribute name="height" type="xs:string" default="600"/>
+        </xs:complexType>
+    </xs:element>
+
 
     <!-- ================ Includes ================ -->
     <!-- possible good idea, but not implementing in 1.0; should use render-mode.text instead
