@@ -22,7 +22,7 @@ text-decoration: none;
 font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 font-weight: normal;
 font-size: 16px; /* set base font size here, all others relative using em */
-vertical-align: baseline;
+vertical-align: center;
 }
 
 /* ========================== body, etc ========================== */
@@ -135,7 +135,7 @@ form {
 display: inline;
 }
 
-button, input[type="reset"], input[type="submit"], input[type="button"] {
+button, input[type="reset"], input[type="submit"], input[type="button"], a.button {
 -webkit-appearance: none;
 -moz-border-radius: 4px;
 -webkit-border-radius: 4px;
@@ -150,13 +150,13 @@ font-size: 0.8em;
 font-weight: bold;
 outline: 0px;
 overflow: visible;
-margin: 0px 2px 0px 2px;
+margin: 2px 2px 2px 2px;
 padding: 2px 4px 2px 4px;
 text-decoration: none;
 text-shadow: #fff 0 1px 1px;
 width: auto;
 }
-button:active, input[type="reset"]:active, input[type="submit"]:active, input[type="button"]:active {
+button:active, input[type="reset"]:active, input[type="submit"]:active, input[type="button"]:active, a.button:active {
 border-color: #999 #bbb #ddd;
 color: #666;
 }
@@ -167,10 +167,15 @@ input[type="text"], input[type="password"], textarea, select {
 border-radius: 4px;
 border: 1px solid;
 border-color: #999 #bbb #ddd;
-margin: 0px 2px 0px 2px;
+margin: 2px 2px 2px 2px;
 padding: 2px 4px 2px 4px;
 font-size: 0.8em;
 font-family: Lucida Console, Monaco, monospace;
+}
+
+th {
+text-align: left;
+padding: 0px 4px 0px 2px;
 }
 
 td {
@@ -208,14 +213,14 @@ color: #000077;
 
 /* ======================= XML Form Styles ======================= */
 
-table.form-single-outer {
+fieldset.form-single-outer {
 margin: 4px;
 -moz-border-radius: 4px;
 -webkit-border-radius: 4px;
 border-radius: 4px;
 border: 1px solid #DDDDDF;
 padding: 4px;
-width: 100%;
+width: 95%;
 }
 table.form-list-outer {
 margin: 4px;
@@ -227,20 +232,30 @@ padding: 4px;
 width: 100%;
 }
 
+.single-form-field {
+}
+
 .form-title {
 padding: 0px 8px 0px 2px;
 font-size: 0.9em;
 font-weight: bold;
-vertical-align: middle;
 }
 table.form-list-outer .form-title {
 border-bottom: 1px solid #DDDDDF;
 white-space: nowrap;
 }
+
+label.form-title {
+vertical-align: middle;
+display: inline-block;
+width: 120px;
+}
+
 .form-date-find span, .form-range-find span, .form-text-find span, .form-text-find select {
 font-size: 0.8em;
 }
 
+/* This is the +/- in the header, use fixed width font for consistent sizing. */
 .form-order-by {
 font-family: Courier, "Courier New", monospace;
 font-weight: bold;
